--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://soundslip-server.herokuapp.com/",
+  "proxy": "https://soundslip-server.herokuapp.com",
   "name": "soundslip",
   "private": true,
   "version": "0.0.0",
