Revert "switching deploy over to render, changed proxy urls and config"
This reverts commit ad94af7d56ba6d99911de5c280c793ce173abc8c.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://soundslip-server.onrender.com",
+  "proxy": "https://soundslip-server.herokuapp.com",
   "name": "soundslip",
   "private": true,
   "version": "0.0.0",
