--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.13.4",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
